# document-classifier

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: commit.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  deps.py  prompt.py
backend/app/schemas/: classification.py
backend/app/services/: classifier.py  ocr.py  pdf_router.py  pipeline.py
backend/tests/: conftest.py  test_health.py  test_root.py
backend/tests/api/: test_classify.py
backend/tests/integration/: test_ollama_live.py
backend/tests/services/: test_classifier.py  test_ocr.py  test_pdf_router.py  test_pipeline.py
docs/: requirements.md
docs/superpowers/plans/: 2026-04-28-local-gemma-classifier.md
docs/superpowers/specs/: 2026-04-28-local-gemma-classifier-design.md
eval/: run_eval.py
eval/datasets/: generate_fixtures.py  samples.jsonl
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ClassificationResult.jsx  Dropzone.jsx  FilePreview.jsx  Header.jsx
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
