[project]
name = "document-classifier-backend"
version = "0.1.0"
description = "Document classification and extraction service (OCR + detection + extraction + classification pipeline)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.73.1",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
